# img_proc

./: CMakeLists.txt  Makefile  README.md
data/: lenna_p1.pbm  lenna_p2.pgm  lenna_p3.ppm  lenna_p4.pbm  lenna_p5.pgm  lenna_p6.ppm
include/: cimg.h  convert.h  filter.h  img.h  imgproc.h  pnm.h  pool.h  util.h
sample/: sample_convert.c  sample_filter.c  sample_pool.c
src/: CMakeLists.txt  cimg.c  convert.c  filter.c  img.c  imgproc.c  pnm.c  pool.c
test/: CMakeLists.txt  read_write_pnm.c  test_avgpool.c  test_binarization.c  test_convert.c  test_filter.c  test_grayscale.c  test_imgproc.c  test_pool.c  test_quantization.c
